--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<p>Software Engineer</p>
 		<div class="buttons">
 			<button class="primary ghost">
-				<a href="twitter.com/_maheskaria">Twitter</a>
+				<a href="https://twitter.com/_maheskaria" target="_blank">Twitter</a>
 			</button>
 			<button class="primary ghost">
-				<a href="https://stackoverflow.com/users/5671926">StackOverflow</a>
+				<a href="https://stackoverflow.com/users/5671926" target="_blank">StackOverflow</a>
 			</button>
 		</div>
 		<div class="skills">
